--- a/homepage.html
+++ b/homepage.html
@@ -53,6 +53,53 @@
         <br>
         <button id="apply">Know More</button>
     </div>
+    <div class="aimodels">
+        <div id="ai">Our AI Models</div>
+        <div>
+            <div id="models">
+                <div class="sec1"></div>
+                <div class="sec2">
+                    <p id="crm">Crop Recommendation Model</p><br><br><p id="des1">
+                        Our Smart AI Model to predict which crop you can grow on your land based on various input.It provides a friendly platform where you can get precise crop recommendation. 
+                    </p><br><br>
+                    <div id="p1">
+                        <i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
+                        <p>Predicts crop based on soil and climate conditions</p>
+                    </div><br>
+                    <div id="p1"><i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
+                        <p>Farmers can use the model to plan their cropping schedule</p>
+                    </div><br>
+                    <div id="p1"><i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i><p>Can help in analyzing various agricultural practices like crop rotation.</p>
+                    </div><br><br>
+                        <button id="btn">Know More</button>
+                    </div>
+             </div>
+             <div id="models">
+                <div class="sec3">
+                    <p id="crm">Fertilizer Recommendation Model</p><br><br>
+                    <p id="des1">
+                        Our Smart AI Model examines soil nutrients, pH, crop needs, and environmental factors to suggest the ideal fertilizer, ensuring optimal growth and sustainability in agricultural practices. 
+                    </p><br><br>
+                    <div id="p1">
+                        <i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
+                        <p>Assesses the soil nutrient levels</p>
+                    </div><br>
+                    <div id="p1">
+                        <i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
+                        <p>pH levels of the soil are analyzed.</p>
+                    </div><br>
+                        <div id="p1">
+                            <i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
+                            <p>Fulfills the nutrient requirement of crop in its various growth stages</p>
+                        </div><br><br>
+                        <button id="btn" >Know More</button>
+                    </div>
+                    <div class="sec4"></div>
+                </div>
+</div>
+<script src="script.js"></script>
+<script src="https://kit.fontawesome.com/f6203f3931.js" crossorigin="anonymous"></script>
+<script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
 
     <script src="script.js"></script>
