Adding Webpages of Forms

--- a/homepage.html
+++ b/homepage.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Grow&Nourish AI</title>
+    <link rel="stylesheet" href="homePage.css">
     <!--dropdown icon-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- google fonts playfair display -->
@@ -30,8 +30,8 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Our Models ▾</a>
                 <ul class="dropdown">
-                    <li><a href="#">Crop Recommendation Model</a></li>
-                    <li><a href="#">Fertilizer Advisor Model</a></li>
+                    <li><a href="cropRec.html">Crop Recommendation Model</a></li>
+                    <li><a href="fertiliserRec.html">Fertilizer Advisor Model</a></li>
                 </ul>
             </li>
             <li><a href="#">News</a></li>
