Addition of Footer

--- a/Client/contact.html
+++ b/Client/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Us | Grow&Nourish AI</title>
     <link rel="stylesheet" href="contact.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Reddit Mono">
 </head>
@@ -13,11 +13,11 @@
             <img id="logo" src="Assets/logo.png">
         </div>
         <ul class="navText">
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Our Models ▾</a>
                 <ul class="dropdown">
-                    <li><a href="#">Crop Recommendation Model</a></li>
-                    <li><a href="#">Fertilizer Advisor Model</a></li>
+                    <li><a href="cropRec.html">Crop Recommendation Model</a></li>
+                    <li><a href="fertiliserAdv.html">Fertilizer Advisor Model</a></li>
                 </ul>
             </li>
             <li><a href="#">News</a></li>
