--- a/Client/fertiliserAdv.html
+++ b/Client/fertiliserAdv.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fertiliser Advisor Model | Grow&Nourish AI</title>
-    <link rel="stylesheet" href="fertiliserRec.css">
+    <link rel="stylesheet" href="fertiliserAdv.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -16,15 +16,15 @@
 <body>
     <nav>
         <div id="header">
-            <img id="logo" src="logo.png">
+            <img id="logo" src="Assets/logo.png">
         </div>
 
         <ul class="navText">
-            <li><a href="homePage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Our Models ▾</a>
                 <ul class="dropdown">
                     <li><a href="cropRec.html">Crop Recommendation Model</a></li>
-                    <li><a href="fertiliserRec.html">Fertilizer Advisor Model</a></li>
+                    <li><a href="#">Fertilizer Advisor Model</a></li>
                 </ul>
             </li>
             <li><a href="#">News</a></li>
@@ -51,6 +51,29 @@
             <input type="number" name="pH" placeholder="Enter pH">
             <br>
             <button>Submit</button>
+        </div>
+    </div>
+
+    
+    <div class="footer">
+        <div id="head">Grow&NourishAI</div><br>
+        <div class="usefulLinks">
+            <div>Useful Links</div>
+            <ul>
+                <li><a href="cropRec.html">Crop Recommendation model</a></li>
+                <li>|</li>
+                <li><a href="fertiliserAdv.html">Fertilisor Advisor model</a></li>
+                <li>|</li>
+                <li><a href="#">News</a></li>
+                <li>|</li>
+                <li><a href="#">Facts</a></li>
+                <li>|</li>
+                <li><a href="#">Chatbot</a></li>
+                <li>|</li>
+                <li><a href="#">About Us</a></li>
+                <li>|</li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
         </div>
     </div>
 </body>
