--- a/Client/cropRec.html
+++ b/Client/cropRec.html
@@ -20,11 +20,11 @@
         </div>
 
         <ul class="navText">
-            <li><a href="homePage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">Our Models ▾</a>
                 <ul class="dropdown">
-                    <li><a href="cropRec.html">Crop Recommendation Model</a></li>
-                    <li><a href="fertiliserRec.html">Fertilizer Advisor Model</a></li>
+                    <li><a href="#">Crop Recommendation Model</a></li>
+                    <li><a href="fertiliserAdv.html">Fertilizer Advisor Model</a></li>
                 </ul>
             </li>
             <li><a href="#">News</a></li>
@@ -53,6 +53,30 @@
             <button>Submit</button>
         </div>
     </div>
+
+    
+    <div class="footer">
+        <div id="head">Grow&NourishAI</div><br>
+        <div class="usefulLinks">
+            <div>Useful Links</div>
+            <ul>
+                <li><a href="cropRec.html">Crop Recommendation model</a></li>
+                <li>|</li>
+                <li><a href="fertiliserAdv.html">Fertilisor Advisor model</a></li>
+                <li>|</li>
+                <li><a href="#">News</a></li>
+                <li>|</li>
+                <li><a href="#">Facts</a></li>
+                <li>|</li>
+                <li><a href="#">Chatbot</a></li>
+                <li>|</li>
+                <li><a href="#">About Us</a></li>
+                <li>|</li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+    </div>
+    
 </body>
 
 </html>
