--- a/Client/pages/contact.html
+++ b/Client/pages/contact.html
@@ -10,7 +10,7 @@
 <body>
     <div class="nav">
         <div id="header">
-            <img id="logo" src="Assets/logo.png">
+            <img id="logo" src="LogicLynx/Client/Assets/logo.png">
         </div>
         <ul class="navText">
             <li><a href="index.html">Home</a></li>
@@ -35,7 +35,7 @@
             <p id="line3">Drop us your details for a quick response.</p><br>
             <br><p id="line3">PHONE<br>+91 97485 72321<br>+91 90412 43168</p>
             <br><p id="line3">EMAIL<br>needhelp.grownourish.org</p><br>
-            <p id="line3">ADDRESS<br>NIT Patna,Patna University Campus,Bihar,India</p>
+            <p id="line3">ADDRESS<br>NIT Patna, Patna University Campus, Bihar, India</p>
         </div>
         <div id="s2">
             <input type="text" placeholder="Your Name" id="name" class="input">
@@ -49,6 +49,29 @@
             <button id="select">SEND MESSAGE</button>
         </div>    
     </div>
+
+    <div class="footer">
+        <div id="head">Grow&NourishAI</div><br>
+        <div class="usefulLinks">
+            <div>Useful Links</div>
+            <ul>
+                <li><a href="cropRec.html">Crop Recommendation model</a></li>
+                <li>|</li>
+                <li><a href="fertiliserAdv.html">Fertilisor Advisor model</a></li>
+                <li>|</li>
+                <li><a href="#">News</a></li>
+                <li>|</li>
+                <li><a href="#">Facts</a></li>
+                <li>|</li>
+                <li><a href="#">Chatbot</a></li>
+                <li>|</li>
+                <li><a href="#">About Us</a></li>
+                <li>|</li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
+        </div>
+    </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
