--- a/Client/pages/fertiliserAdv.html
+++ b/Client/pages/fertiliserAdv.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crop Recommendation Model | Grow&Nourish AI</title>
-    <link rel="stylesheet" href="cropRec.css">
+    <title>Fertiliser Advisor Model | Grow&Nourish AI</title>
+    <link rel="stylesheet" href="fertiliserAdv.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -23,32 +23,32 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Our Models ▾</a>
                 <ul class="dropdown">
-                    <li><a href="#">Crop Recommendation Model</a></li>
-                    <li><a href="fertiliserAdv.html">Fertilizer Advisor Model</a></li>
+                    <li><a href="cropRec.html">Crop Recommendation Model</a></li>
+                    <li><a href="#">Fertilizer Advisor Model</a></li>
                 </ul>
             </li>
             <li><a href="#">News</a></li>
             <li><a href="#">Facts</a></li>
             <li><a href="#">ChatBot</a></li>
             <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
         </ul>
     </nav>
 
     <div class="hero">
-        <div class=" box">
-            <div class="modelName">Crop Recommendation</div>
-            <div class="formtag">Temperature</div>
-            <input type="number" name="Humidity" placeholder="Enter Temperature">
+        <div class="box">
+            <div class="modelName">Fertiliser Advisor</div>
+            <div class="formtag">Nitrogen (N)</div>
+            <input type="number" name="Nitrogen" placeholder="Enter Percentage of N Content">
             <br>
-            <div class="formtag">Humidity</div>
-            <input type="number" name="pH" placeholder="Enter Humidity">
+            <div class="formtag">Phosphorus (P)</div>
+            <input type="number" name="Phosphorus" placeholder="Enter Percentage of P Content">
+            <br>
+            <div class="formtag">Potassium (K)</div>
+            <input type="number" name="Potassium" placeholder="Enter Percentage of K Content">
             <br>
             <div class="formtag">pH</div>
-            <input type="number" name="rainfall" placeholder="Enter pH">
-            <br>
-            <div class="formtag">Rainfall</div>
-            <input type="number" name="temperature" placeholder="Enter Rainfall">
+            <input type="number" name="pH" placeholder="Enter pH">
             <br>
             <button>Submit</button>
         </div>
@@ -62,7 +62,7 @@
             <ul>
                 <li><a href="cropRec.html">Crop Recommendation model</a></li>
                 <li>|</li>
-                <li><a href="fertiliserAdv.html">Fertilisor Advisor model</a></li>
+                <li><a href="#">Fertilisor Advisor model</a></li>
                 <li>|</li>
                 <li><a href="#">News</a></li>
                 <li>|</li>
@@ -72,11 +72,10 @@
                 <li>|</li>
                 <li><a href="#">About Us</a></li>
                 <li>|</li>
-                <li><a href="#">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </div>
     </div>
-    
 </body>
 
 </html>
