--- a/Client/pages/index.html
+++ b/Client/pages/index.html
@@ -80,12 +80,12 @@
                     <div id="p1"><i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
                         <p>Can help in analyzing various agricultural practices like crop rotation.</p>
                     </div><br><br>
-                    <button id="btn">Know More</button>
+                    <button id="btn">VISIT</button>
                 </div>
             </div>
             <div id="models">
                 <div class="sec3">
-                    <p id="crm">Fertilizer Recommendation Model</p><br><br>
+                    <p id="crm">Fertilizer Advisor Model</p><br><br>
                     <p id="des1">
                         Our Smart AI Model examines soil nutrients, pH, crop needs, and environmental factors to suggest
                         the ideal fertilizer, ensuring optimal growth and sustainability in agricultural practices.
@@ -102,7 +102,7 @@
                         <i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
                         <p>Fulfills the nutrient requirement of crop in its various growth stages</p>
                     </div><br><br>
-                    <button id="btn">Know More</button>
+                    <button id="btn">VISIT</button>
                 </div>
                 <div class="sec4"></div>
             </div>
@@ -151,7 +151,7 @@
                 <p id="line3">PHONE<br>+91 97485 72321<br>+91 90412 43168</p>
                 <br>
                 <p id="line3">EMAIL<br>needhelp.grownourish.org</p><br>
-                <p id="line3">ADDRESS<br>NIT Patna,Patna University Campus,Bihar,India</p>
+                <p id="line3">ADDRESS<br>NIT Patna, Patna University Campus, Bihar, India</p>
             </div>
             <div id="s2">
                 <input type="text" placeholder="Your Name" id="name" class="input">
@@ -184,7 +184,7 @@
                     <li>|</li>
                     <li><a href="#">About Us</a></li>
                     <li>|</li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
