Addition of ChatBot and peculiar changes

--- a/Client/pages/fertiliserAdv.html
+++ b/Client/pages/fertiliserAdv.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <div id="header">
-            <img id="logo" src="Assets/logo.png">
+            <img id="logo" src="../Assets/logo.png">
         </div>
 
         <ul class="navText">
