--- a/Client/pages/index.html
+++ b/Client/pages/index.html
@@ -30,7 +30,7 @@
 <body>
     <div class="nav">
         <div id="header">
-            <img id="logo" src="Assets/logo.png">
+            <img id="logo" src="../Assets/logo.png">
         </div>
         <ul class="navText">
             <li><a href="#">Home</a></li>
@@ -42,7 +42,7 @@
             </li>
             <li><a href="#">News</a></li>
             <li><a href="#">Facts</a></li>
-            <li><a href="#">ChatBot</a></li>
+            <li><a href="https://mediafiles.botpress.cloud/9b301c3d-2387-49c0-9af0-eed2b20b8d70/webchat/bot.html">ChatBot</a></li>
             <li><a href="#">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -112,7 +112,7 @@
             <div class="cards">
                 <!-- card1 -->
                 <div class="parent-cont">
-                    <img id="newsimg" src="Assets/news1copy.jpg">
+                    <img id="newsimg" src="../Assets/news1copy.jpg">
                     <div class="heading">
                         <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </div>
@@ -121,7 +121,7 @@
                     </div>
                 </div><!-- card2 -->
                 <div class="parent-cont">
-                    <img id="newsimg" src="Assets/news1copy.jpg">
+                    <img id="newsimg" src="../Assets/news1copy.jpg">
                     <div class="heading">
                         <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </div>
@@ -131,7 +131,7 @@
                 </div>
                 <!-- card3 -->
                 <div class="parent-cont">
-                    <img id="newsimg" src="Assets/news1copy.jpg">
+                    <img id="newsimg" src="../Assets/news1copy.jpg">
                     <div class="heading">
                         <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </div>
@@ -180,7 +180,7 @@
                     <li>|</li>
                     <li><a href="#">Facts</a></li>
                     <li>|</li>
-                    <li><a href="#">Chatbot</a></li>
+                    <li><a href="https://mediafiles.botpress.cloud/9b301c3d-2387-49c0-9af0-eed2b20b8d70/webchat/bot.html">Chatbot</a></li>
                     <li>|</li>
                     <li><a href="#">About Us</a></li>
                     <li>|</li>
@@ -191,6 +191,7 @@
 
 
         <script src="script.js"></script>
+        <script src="bot.js"></script>
         <script src="https://kit.fontawesome.com/f6203f3931.js" crossorigin="anonymous"></script>
         <script type="text/javascript"
             src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
