News Section Design Edits

--- a/Client/pages/index.html
+++ b/Client/pages/index.html
@@ -42,7 +42,9 @@
             </li>
             <li><a href="#">News</a></li>
             <li><a href="#">Facts</a></li>
-            <li><a href="https://mediafiles.botpress.cloud/9b301c3d-2387-49c0-9af0-eed2b20b8d70/webchat/bot.html">ChatBot</a></li>
+            <li><a
+                    href="https://mediafiles.botpress.cloud/9b301c3d-2387-49c0-9af0-eed2b20b8d70/webchat/bot.html">ChatBot</a>
+            </li>
             <li><a href="#">About Us</a></li>
             <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -108,20 +110,12 @@
             </div>
         </div>
         <div class="news">
-            <div id="article">News And Articles</div>
+            <div id="article" style="font-family: 'Playfair display', sans-serif">News And Articles</div>
             <div class="cards">
+
                 <!-- card1 -->
                 <div class="parent-cont">
-                    <img id="newsimg" src="../Assets/news1copy.jpg">
-                    <div class="heading">
-                        <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                    </div>
-                    <div class="click">
-                        <button id="btn">Read More</button>
-                    </div>
-                </div><!-- card2 -->
-                <div class="parent-cont">
-                    <img id="newsimg" src="../Assets/news1copy.jpg">
+                    <img id="newsimg" src="../Assets/pexels-pixabay-461960.jpg">
                     <div class="heading">
                         <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </div>
@@ -129,9 +123,21 @@
                         <button id="btn">Read More</button>
                     </div>
                 </div>
+
+                <!-- card2 -->
+                <div class="parent-cont">
+                    <img id="newsimg" src="../Assets/bg.jpeg">
+                    <div class="heading">
+                        <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    </div>
+                    <div class="click">
+                        <button id="btn">Read More</button>
+                    </div>
+                </div>
+
                 <!-- card3 -->
                 <div class="parent-cont">
-                    <img id="newsimg" src="../Assets/news1copy.jpg">
+                    <img id="newsimg" src="../Assets/pexels-tom-fisk-1595108.jpg">
                     <div class="heading">
                         <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </div>
@@ -139,19 +145,24 @@
                         <button id="btn">Read More</button>
                     </div>
                 </div>
+
             </div>
         </div>
         <div class="contact">
             <div id="s1">
-                <p id="line1">Contact Now</p>
                 <br>
                 <p id="line2">GET IN TOUCH</p><br>
                 <p id="line3">Drop us your details for a quick response.</p><br>
                 <br>
-                <p id="line3">PHONE<br>+91 97485 72321<br>+91 90412 43168</p>
+                <p class="line3">PHONE</p>
+                <p id="phNo"></p>Manya Gupta - +91 97485 72321<br>Prisha Garg - +91 90412 43168<br>Shanvi Dixit -
+                8810904010<br>Shaivya Tripathi - 9870581761</p>
                 <br>
-                <p id="line3">EMAIL<br>needhelp.grownourish.org</p><br>
-                <p id="line3">ADDRESS<br>NIT Patna, Patna University Campus, Bihar, India</p>
+                <p class="line3">EMAIL</p>
+                <p>needhelp.grownourish.org</p>
+                <br>
+                <p class="line3">ADDRESS</p>
+                <p>NIT Patna, Patna University Campus, Bihar, India</p>
             </div>
             <div id="s2">
                 <input type="text" placeholder="Your Name" id="name" class="input">
@@ -180,7 +191,9 @@
                     <li>|</li>
                     <li><a href="#">Facts</a></li>
                     <li>|</li>
-                    <li><a href="https://mediafiles.botpress.cloud/9b301c3d-2387-49c0-9af0-eed2b20b8d70/webchat/bot.html">Chatbot</a></li>
+                    <li><a
+                            href="https://mediafiles.botpress.cloud/9b301c3d-2387-49c0-9af0-eed2b20b8d70/webchat/bot.html">Chatbot</a>
+                    </li>
                     <li>|</li>
                     <li><a href="#">About Us</a></li>
                     <li>|</li>
