Changes in style

--- a/Client/pages/index.html
+++ b/Client/pages/index.html
@@ -62,7 +62,7 @@
         <button id="apply">Know More</button>
     </div>
     <div class="aimodels">
-        <div id="ai">Our AI Models</div>
+        <div id="ai" style="font-family: 'Playfair display', sans-serif;">Our AI Models</div>
         <div>
             <div id="models">
                 <div class="sec1"></div>
@@ -82,7 +82,7 @@
                     <div id="p1"><i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
                         <p>Can help in analyzing various agricultural practices like crop rotation.</p>
                     </div><br><br>
-                    <button id="btn">VISIT</button>
+                    <button class="btn"><a href="cropRec.html">VISIT</a></button>
                 </div>
             </div>
             <div id="models">
@@ -104,13 +104,13 @@
                         <i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
                         <p>Fulfills the nutrient requirement of crop in its various growth stages</p>
                     </div><br><br>
-                    <button id="btn">VISIT</button>
+                    <button class="btn"><a href="fertiliserAdv.html">VISIT</a></button>
                 </div>
                 <div class="sec4"></div>
             </div>
         </div>
         <div class="news">
-            <div id="article" style="font-family: 'Playfair display', sans-serif">News And Articles</div>
+            <div id="article" style="font-family: 'Playfair display', sans-serif">News and Articles</div>
             <div class="cards">
 
                 <!-- card1 -->
@@ -120,7 +120,7 @@
                         <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </div>
                     <div class="click">
-                        <button id="btn">Read More</button>
+                        <button class="btn">Read More</button>
                     </div>
                 </div>
 
@@ -131,7 +131,7 @@
                         <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </div>
                     <div class="click">
-                        <button id="btn">Read More</button>
+                        <button class="btn">Read More</button>
                     </div>
                 </div>
 
@@ -142,7 +142,7 @@
                         <p class="headline">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </div>
                     <div class="click">
-                        <button id="btn">Read More</button>
+                        <button class="btn">Read More</button>
                     </div>
                 </div>
 
