--- a/Client/pages/index.html
+++ b/Client/pages/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grow&Nourish AI</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <!--dropdown icon-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- google fonts playfair display -->
@@ -30,14 +30,14 @@
 <body>
     <div class="nav">
         <div id="header">
-            <img id="logo" src="../Assets/logo.png">
+            <img id="logo" src="./templates/logo.png">
         </div>
         <ul class="navText">
             <li><a href="#">Home</a></li>
             <li><a href="#">Our Models ▾</a>
                 <ul class="dropdown">
-                    <li><a href="cropRec.html">Crop Recommendation Model</a></li>
-                    <li><a href="fertiliserAdv.html">Fertilizer Advisor Model</a></li>
+                    <li><a href="./templates/croprec.html">Crop Recommendation Model</a></li>
+                    <li><a href="./templates/fert.html">Fertilizer Advisor Model</a></li>
                 </ul>
             </li>
             <li><a href="#">News</a></li>
