--- a/Client/pages/index.html
+++ b/Client/pages/index.html
@@ -36,7 +36,7 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Our Models ▾</a>
                 <ul class="dropdown">
-                    <li><a href="./templates/croprec.html">Crop Recommendation Model</a></li>
+                    <li><a href="http://127.0.0.1:5000">Crop Recommendation Model</a></li>
                     <li><a href="./templates/fert.html">Fertilizer Advisor Model</a></li>
                 </ul>
             </li>
