--- a/Client/pages/index.html
+++ b/Client/pages/index.html
@@ -82,7 +82,7 @@
                     <div id="p1"><i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
                         <p>Can help in analyzing various agricultural practices like crop rotation.</p>
                     </div><br><br>
-                    <button class="btn"><a href="cropRec.html">VISIT</a></button>
+                    <button class="btn"><a href="croprec.html">VISIT</a></button>
                 </div>
             </div>
             <div id="models">
@@ -104,7 +104,7 @@
                         <i class="fa-solid fa-circle-check" style="color: #f7c35f;"></i>
                         <p>Fulfills the nutrient requirement of crop in its various growth stages</p>
                     </div><br><br>
-                    <button class="btn"><a href="fertiliserAdv.html">VISIT</a></button>
+                    <button class="btn"><a href="fert.html">VISIT</a></button>
                 </div>
                 <div class="sec4"></div>
             </div>
